--- a/src/Slide.scss
+++ b/src/Slide.scss
@@ -13,6 +13,19 @@
     .main {
         box-sizing: border-box;
         height: 80vh;
+        .MJXc-display {
+            margin: 0 0;
+        }
+        .induction-next {
+            width: 100%;
+            text-align: center;
+            button {
+                background-color: #e9e9e9;
+                border: 1px solid silver;
+                border-radius: 5px;
+                padding: 2px 4px;
+            }
+        }
     }
     .footer {
         box-sizing: border-box;
