Add population plot

--- a/src/Slide.scss
+++ b/src/Slide.scss
@@ -38,6 +38,9 @@
                 padding: 4px;
                 border-radius: 4px;
             }
+            span {
+                cursor: pointer;
+            }
         }
     }
     .footer {
